# onnxruntime-samples

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE.md  README.md  requirements.txt  sonar-project.properties
.et/: conftest.py  pytest.ini  run_wrapper.py  test_onnxruntime_samples.py
artifacts/: 1984.m4a  models.yaml  squad-dataset-to-input-tensor.py
models/common/: txt2img.py  utils.py
models/image-classifier/c++/: CMakeLists.txt  Config.h.in  mnist.cpp  model-mnist-desc.json  resnet.cpp
models/image-classifier/c++/ImgUtilities/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  ErrorMng.cpp  ErrorMng.hpp  ExecuteOnExit.hpp  FileSystem.cpp  FileSystem.hpp  PNGUtils.cpp  PNGUtils.hpp  PreprocessImageClassifier.cpp  PreprocessImageClassifier.hpp  RawImage.hpp  Types.cpp  Types.hpp  Utils.cpp  Utils.hpp
models/image-classifier/c++/PngHelp/: CMakeLists.txt  ExecuteOnExit.hpp  FileSystem.cpp  FileSystem.hpp  HelperFunctions.cpp  HelperFunctions.hpp  PNGUtils.cpp  PNGUtils.hpp  RawImage.hpp
models/image-classifier/python/: mnist.py  mobilenet.py  resnet50.py  resnet50_profile.py  retinanet.py  transunet.py  unet.py  vgg16.py  vgg19.py  yolo_v8.py
models/image-classifier/python/common/: utils.py
models/language-model/python/: bert.py  bert_profile.py  llava.py  llm-kvc.py  whisper-kvc.py
models/text-to-image/python/: compare_images.py  openjourney.py  testimages.py
